; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/cores/chipc/pwrctl/extr_bhnd_pwrctl_subr.c_bhnd_pwrctl_fast_pwrup_delay.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/cores/chipc/pwrctl/extr_bhnd_pwrctl_subr.c_bhnd_pwrctl_fast_pwrup_delay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bhnd_pwrctl_softc = type { i32 }

@CHIPC_PLL_ON_DELAY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bhnd_pwrctl_fast_pwrup_delay(%struct.bhnd_pwrctl_softc* %0) #0 {
  %2 = alloca %struct.bhnd_pwrctl_softc*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.bhnd_pwrctl_softc* %0, %struct.bhnd_pwrctl_softc** %2, align 8
  store i32 0, i32* %5, align 4
  %6 = load %struct.bhnd_pwrctl_softc*, %struct.bhnd_pwrctl_softc** %2, align 8
  %7 = call i32 @bhnd_pwrctl_slowclk_freq(%struct.bhnd_pwrctl_softc* %6, i32 0)
  store i32 %7, i32* %4, align 4
  %8 = load %struct.bhnd_pwrctl_softc*, %struct.bhnd_pwrctl_softc** %2, align 8
  %9 = getelementptr inbounds %struct.bhnd_pwrctl_softc, %struct.bhnd_pwrctl_softc* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @CHIPC_PLL_ON_DELAY, align 4
  %12 = call i32 @bhnd_bus_read_4(i32 %10, i32 %11)
  %13 = add nsw i32 %12, 2
  store i32 %13, i32* %3, align 4
  %14 = load i32, i32* %3, align 4
  %15 = mul nsw i32 %14, 1000000
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* %4, align 4
  %17 = sub nsw i32 %16, 1
  %18 = load i32, i32* %3, align 4
  %19 = add nsw i32 %18, %17
  store i32 %19, i32* %3, align 4
  %20 = load i32, i32* %3, align 4
  %21 = load i32, i32* %4, align 4
  %22 = sdiv i32 %20, %21
  store i32 %22, i32* %5, align 4
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i32 @bhnd_pwrctl_slowclk_freq(%struct.bhnd_pwrctl_softc*, i32) #1

declare dso_local i32 @bhnd_bus_read_4(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
